--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,16 @@ plugins:
 sass:
     sass_dir: _sass
 
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
